--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,9 +1,10 @@
 .MovieSection {
-    opacity: 0;
+    font-size: 24px;
     .title {
-        display: block;
-        font-size: 36px;
+        padding-left: 20px;
+        display: inline-block;
         line-height: 48px;
+        box-shadow: 0 0 3px 3px rgba(0,0,0,.4)
     }
     .moveWrap {
         display: flex;
@@ -12,8 +13,30 @@
         flex-wrap: wrap;
     }
     .movieItem {
+        box-sizing: border-box;
         display: block;
-        height: 300px;
-        width: 300px;
+        height: 350px;
+        width: 350px;
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid #eee;
+    }
+    .movieImage {
+        box-sizing: border-box;
+        width: 100%;
+        height: auto;
+        overflow: hidden;
+        text-align: center;
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+    .movieText {
+        display: block;
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 }
